# Insurance-Document-Risk-Analyzer

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  agents.py  config.py  extraction.py  ingestion.py  layout.py  main.py  pipeline.py  schemas.py  scoring.py  storage.py
app/ui/: streamlit_app.py
docs/: aws-elastic-beanstalk.md
infra/: aws-sam-template.yaml
scripts/: __init__.py  train_model.py  validate_model.py
tests/: test_api.py  test_extraction.py  test_ingestion.py  test_scoring.py  test_storage.py
