[project]
package-mode = false
name = "insurance-document-risk-analyzer"
version = "0.1.0"
description = "AI-powered insurance document ingestion, extraction, risk scoring, and underwriting recommendations."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9",
  "pydantic>=2.6",
  "boto3>=1.34",
  "streamlit>=1.32",
  "requests>=2.31",
]

[project.optional-dependencies]
ai = [
  "torch>=2.2",
  "transformers>=4.38",
  "spacy>=3.7.5,<4.0",
  "pymupdf>=1.23",
  "pillow>=10.2",
  "langchain>=0.1.13",
  "langchain-openai>=0.1.1",
  "langchain-anthropic>=0.1.4",
]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.poetry]
package-mode = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]
exclude = ["tests*", "work*", "outputs*", "infra*"]
